# halcat0x15a.github.io

./: .gitignore  CNAME  README.md  _config.yml  build.sbt  clojure_contrib.md  core_logic.md  curry_howard.md  deriving_lenses.md  evaluator.md  free_ap.md  hello_world.md  index.html  index.md  oleg.html  oleg.md  project.clj  stackless.md  stackless.scala  stackless_scala.md  typelevel_fizzbuzz.md  videos.html
_includes/: entry.html
_layouts/: article.html  default.html
clojure/contrib/: index.md  project.clj
clojure/evaluator/: index.md  main.js  project.clj
clojure/evaluator/src-cljs/evaluator/: core.cljs
clojure/logic/: index.md  project.clj
fib/: Main.cs  Main.hs  Main.scala  main.c  main.go  main.py
fizzbuzz/: Main.cs  Main.hs  Main.scala  main.c
haskell/logic/: index.md
hello/: Main.cs  Makefile
hello_world/: Makefile
hello_world/fib/: Main.cs  Main.hs  Main.java  main.cpp  main.go  main.rb
hello_world/fizzbuzz/: Main.hs  Main.java  main.cpp  main.go
programming/deriving/: Lens.hs  build.sbt  deriving.cabal  index.md
programming/deriving/src/main/haskell/Deriving/: Lens.hs  Nat.hs  Person.hs
programming/deriving/src/main/java/deriving/java/: Lens.java
programming/deriving/src/test/haskell/: Spec.hs
programming/deriving/src/test/scala/deriving/: DerivingLensSpec.scala
programming/helloworld/: Makefile  index.md
programming/helloworld/fib/: Main.java  main.c  main.cpp  main.py
scala/curryhoward/: index.md
scala/extensible/: build.sbt  index.md
scala/fizzbuzz/: index.md
scala/freeap/: index.md
scala/stackless/: index.md
(+78 files in other folders)
