name:                deriving
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src/main/haskell
  exposed-modules:
    Deriving.Lens
    Deriving.Nat
    Deriving.Person
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite deriving-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/test/haskell
  main-is:             Spec.hs
  build-depends:       base
                     , deriving
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
